Fixes popup bug on mobile, now dynamic for all screens

--- a/src/pages/Home/components/PopupMarker/style.scss
+++ b/src/pages/Home/components/PopupMarker/style.scss
@@ -4,62 +4,52 @@
 
 .popup-window {
   box-sizing: border-box;
-  width: 25em;
-  height: 10em;
+  width: 100%;
+  height: 100%;
+  max-width: 25em;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
   border: gray 1px solid;
   animation: 0.1s ease-in-out 0s 1 scaleOut;
 
-  .popup-info {
-    width: 98%;
-    height: 95%;
+  .business-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .business-info {
+    align-self: flex-start;
+    height: 100%;
+    width: 100%;
+    max-width: 180px;
     display: flex;
-    margin: auto;
+    flex-direction: column;
     align-items: center;
+    margin: 0 5px;
 
-    .business-image-link {
-      min-width: 40%;
-      max-width: 40%;
-      height: 100%;
-
-      .business-image {
-        width: 100%;
-        height: 100%;
-        min-width: 112px;
-        border-radius: 5px;
-      }
+    .business-name {
+      width: 50%;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+      color: #235a78;
     }
 
-    .business-info {
-      align-self: flex-start;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      margin: 0 5px;
+    li {
+      padding: 2px;
+      margin: 1px;
+    }
 
-      .business-name {
-        width: 50%;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-        color: #235a78;
-      }
-
-      li {
-        padding: 2px;
-        margin: 1px;
-      }
-
-      .type {
-        margin: 5px;
-        color: $dark-grey;
-        font-style: italic;
-        font-size: 14px;
-      }
+    .type {
+      margin: 5px;
+      color: $dark-grey;
+      font-style: italic;
+      font-size: 14px;
     }
   }
 
@@ -76,7 +66,6 @@
 
   button:hover {
     background-color: #508991;
-    // font-weight: 800; Causes button to grow 3x out of bounds
   }
 
   .grow {
